--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,259 @@
+:root {
+  --main-title-color: #ffffff;
+  --secont-title-color: #303030;
+  --main-btn-color: #ffffff;
+  --secont-btn-color: #303030;
+}
+
 body {
-    font-family: 'open sans', 'sans-serif';
+  font-family: "Open Sans", sans-serif;
 }
+
 .header-link {
-font-style: normal;
-font-weight: 600;
-font-size: 12px;
-line-height: 1.33;
-letter-spacing: 0.1em;
-
-color: #FFFFFF;
-
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  color: var(--main-title-color, #ffffff);
 }
+
+.btn {
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.title {
+  font-family: "Raleway" sans-serif;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16px;
+  letter-spacing: 0.05em;
+}
+
+.top-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-transform: uppercase;
+}
+/* ---------------------HEADER----------------------- */
+
 .header {
-    background-color: gray;
+  background-color: gray;
 }
+
 .header-navigstion {
 }
+
 .header-logo {
 }
+
 .header-list {
 }
+
 .header-item {
 }
 
+.header-link {
+  text-decoration: none;
+}
+
+.header-link:is(:hover, :focus) {
+  color: #ff6c00;
+}
+
 .list {
-    list-style: none;
+  list-style: none;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+.header-btn {
+  color: #ffffff;
+}
+
+.header-phone {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+/* ---------------------HERO----------------------- */
+
+.hero {
+  background-color: #6e7385;
+}
+
+.hero-list {
+}
+
+.hero-item {
+}
+
+.hero-link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #303030;
+}
+
+.hero-link:is(:hover, :focus) {
+  color: #ff6c00;
+}
+
+.hero-top-text {
+  color: rgba(157, 164, 189, 0.6);
+}
+.hero-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 72px;
+  line-height: 1.18;
+  letter-spacing: 0.05em;
+  color: var(--main-title-color, #ffffff);
+}
+.hero-bottom-text {
+  font-size: 18px;
+  line-height: 1.66;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+
+/* ---------------------ABOUT----------------------- */
+.about-list {
+}
+
+.about-item {
+}
+
+.about-top-text {
+  color: #303030;
+}
+
+.about-title {
+  color: #303030;
+}
+
+.about-bottom-text {
+  font-size: 18px;
+  line-height: 1.66;
+  letter-spacing: 0.02em;
+  color: #555555;
+}
+
+.about-text {
+  font-size: 14px;
+  line-height: 1.85;
+  letter-spacing: 0.02em;
+  color: #555555;
+}
+
+.about-btn {
+  color: #303030;
+}
+
+/* ---------------------PRICES----------------------- */
+
+.prices {
+  background-color: #6e7385;
+}
+
+.prices-top-text {
+  color: rgba(157, 164, 189, 0.6);
+}
+
+.prices-title {
+  color: #ffffff;
+}
+
+.prices-list {
+}
+
+.prices-item {
+}
+
+.prices-item-text {
+  font-size: 18px;
+  line-height: 1.66px;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+
+.prices-btn {
+  color: #ffffff;
+}
+
+/* ---------------------BENEFITS----------------------- */
+
+.benefits {
+}
+.benefits-list {
+}
+.benefits-item .count {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.35;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #303030;
+}
+.benefits-top-text {
+  color: #303030;
+}
+
+.benefits-title {
+  color: #303030;
+}
+
+.benefits-bottom-text {
+  font-size: 18px;
+  line-height: 1.66;
+  letter-spacing: 0.02em;
+  color: #555555;
+}
+.count {
+}
+.benefits-item-text {
+}
+
+/* ---------------------BARBERS----------------------- */
+
+.barbers {
+}
+.barbers-top-text {
+}
+.barbers-title {
+  color: var(--secont-title-color);
+}
+.barbers-list {
+  color: #303030;
+}
+.barbers-item {
+}
+.barbers-subtitle {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.38;
+  text-align: center;
+  letter-spacing: 0.02em;
+
+  color: #303030;
+}
+.barbers-item-text {
+  font-size: 14px;
+  line-height: 1.35;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ff6c00;
 }
