--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --secont-title-color: #303030;
   --main-btn-color: #ffffff;
   --secont-btn-color: #303030;
+  --bg-gradient: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2));
 }
 
 /* p, h1, h2, h3 ,h4, h5, h6 {
@@ -126,11 +127,15 @@ body {
 /* ---------------------HERO----------------------- */
 
 .hero {
-
 }
 
 .hero-wrap {
   background-color: #7e8291;
+  background-image: var(--bg-gradient),
+    url(../img/hero-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   flex-grow: 1;
 }
 
